# miso-bot

./: .backup.env.example  .deepsource.toml  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .restic.env.example  Dockerfile  LICENSE  Pipfile  README.md  REUSE.toml  backup.sh  bot.py  dev-requirements.in  dev-requirements.txt  docker-compose-bot-only.yml  docker-compose.yml  flake.nix  gateway_proxy_config.json  ipc.py  launch  launch-image-server  launcher.py  main.py  nginx.conf  polls.yaml.example  privacy-policy.md  privacy_policy.md  prometheus.yml  pyproject.toml  requirements.in  requirements.txt  run-dev  update-deps
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  lint.yml  reuse-complicance.yml
.reuse/: addheader  dep5
.reuse/templates/: header.jinja2
cogs/: bangs.py  chatbot.py  config.py  configuration.py  crypto.py  customcommands.py  errorhandler.py  events.py  fishy.py  fm.py  images.py  info.py  information.py  kpop.py  lastfm.py  media.py  migratedb.py  misc.py  miscellaneous.py  mod.py  notifications.py  opgg.py  owner.py  prometheus.py  reddit.py  reminders.py  rolepicker.py  roles.py  schedule.py  sorter.py  stats.py  topalbums  tts.py  typing.py  typings.py  user.py  utility.py  webserver.py  wordcloud.py
data/: boy_bands.tsv  clear_day  clear_day.sh  clear_month  clear_month.sh  clear_week  clear_week.sh  data.json  database.db  database.py  emoji-word-association.json  emoji_map.json  female_idols.tsv  girl_groups.tsv  kpop.db  kpopdb_boygroups.tsv  kpopdb_girlgroups.tsv  kpopdb_idols.tsv  male_idols.tsv  schema.sql  weather.json  wordlist.json
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  index.html  privacy-policy.md  terms-of-service.md
docs/assets/: styles.css
downloads/: temp
helpers/: emojis.py  errormessages.py  exceptions.py  help.py  log.py  utilityfunctions.py
html/: candlestick_chart.html  candlestick_chart.min.html  fm_chart.html  fm_chart.min.html  fm_chart_flex.html  fm_chart_style.css  new_profile.html  profile.html  profile.min.html
html/static/: fm_collage.css
html/templates/: fm_collage.hbs
infra/: nginx.conf  prometheus.yml
libraries/: minestat.py  plotter.py  unicode_codes.py
modules/: __init__.py  cache.py  emoji_literals.py  emojifier.py  emojis.py  exceptions.py  gateway_proxy.py  genius.py  help.py  instagram.py  keychain.py  lastfm.py  log.py  maria.py  media_embedders.py  misobot.py  profiles.py  queries.py  reddit.py  redis.py  shazam.py  tiktok.py  ui.py  util.py  views.py
sql/: clear_activity_day.sql  clear_activity_week.sql  kpop_schema.sql  recreate.sql  schema.sql
sql/init/: 0_schema.sql  1_kpop_schema.sql  2_staticdata.sql
sql/scheduled/: clear_activity_month.sql
src/cogs/: configuration.py  errorhandler.py  kpop.py  lastfm.py  misc.py  mod.py  owner.py  prometheus.py  typings.py  user.py  utility.py  webserver.py
src/data/: kpopdb_idols.tsv
src/html/: fm_chart.html  profile.html  profile.min.html
src/modules/: emoji_literals.py  emojis.py  instagram.py  keychain.py  media_embedders.py  misobot.py  tiktok.py
static/css/: fm_collage.css  profile copy.css  profile.css
templates/: fm_collage.hbs  profile copy.hbs  profile.hbs
